# course-planning

./: LICENSE  README.md  course-planning.cabal
data/: .gitignore  fetch.sh  subjects.txt
data/courses/: CO_CS_MATH_PMATH_STAT.txt
lib/CoursePlanning/: Course.hs
scraper/: Main.hs
