cabal-version:      3.0
name:               course-planning

version:            0.0.0.0

-- synopsis:
-- description:
license:            NONE
author:             hb16
maintainer:         boshwang1234@gmail.com

-- A copyright notice.
-- copyright:
build-type:         Simple

common common
    ghc-options:
        -Wall
    default-language: Haskell2010
    build-depends:
        base,
        bytestring,
        text,

library
    import:           common
    hs-source-dirs:   lib
    exposed-modules:  CoursePlanning.Course
