cabal-version:      3.0
name:               course-planning

version:            0.0.0.0

-- synopsis:
-- description:
license:            NONE
author:             hb16
maintainer:         boshwang1234@gmail.com

-- A copyright notice.
-- copyright:
build-type:         Simple

common common
    ghc-options:
        -Wall
    default-language: Haskell2010
    default-extensions:
        DataKinds,
        DuplicateRecordFields,
        FlexibleInstances,
        LambdaCase,
        MultiParamTypeClasses,
        MultiWayIf,
        NoFieldSelectors,
        OverloadedLabels,
        OverloadedRecordDot,
        PatternSynonyms,
        TupleSections,
        TypeFamilies,
        TypeOperators,
        UndecidableInstances,
        ViewPatterns,
    build-depends:
        base >=4.18 && <5,
        bytestring,
        text,
        transformers,
        optics,

common executable
    import:           common
    build-depends:    course-planning

library
    import:           common
    hs-source-dirs:   lib
    exposed-modules:  CoursePlanning.Course

executable scraper
    import:           executable
    hs-source-dirs:   scraper
    main-is:          Main.hs
    build-depends:
        tagsoup,
        scalpel-core,
        split,
        extra,
        pretty-simple,
